# my_recommendation_system

./: .coveragerc  .env  .env.example  AUTHORS.rst  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE.txt  Netflix_recommendation_notebook.ipynb  README.md  README.rst  netflix_recommendation_notebook.ipynb  pyproject.toml  recommendations_userId_4_for_top_5_movies.csv  setup.cfg  setup.py
docs/: conf.py  index.rst
models/: collaborative_filtering.py  matrix_factorization.py
src/recommender_system/: collaborative_filtering.py  final_rating.csv  main.py  pre_processing.py  rank_based.py  recommender.py  skeleton.py  utils.py
tests/: conftest.py  test_skeleton.py
