[tool.poetry]
name = "recommender-system"
version = "0.1.0"
description = "Building a recommendation system for movies"
authors = ["Kinjuriu <stephanenjokingugi@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "../"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.2"
pip = "^22.3.1"
surprise = "^0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
